--- a/index.html
+++ b/index.html
@@ -192,6 +192,7 @@
         border-radius: 8px;
         text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.8);
         background-color: rgba(0, 0, 0, 0.5);
+        text-align: center;
         font-size: 20px;
         font-weight: bold;
         position: absolute;
@@ -1431,6 +1432,7 @@
 
               const playerId = this.playerId;
               const stateElement = document.getElementById(`state${playerId}`);
+              const slotWrap = document.getElementById(`slot${playerId}`);
 
               // 映像の準備完了を待つ
               const waitForCanPlay = () => {
@@ -1462,6 +1464,7 @@
 
                       // ステート要素を非表示に
                       stateElement.style.display = "none";
+                      slotWrap.style.transform = "translate(50px, -170px) scale(0.8)";
 
                       // DOM操作とブラウザレンダリングの完了を待ってから再生開始
                       requestAnimationFrame(() => {
@@ -1516,6 +1519,7 @@
 
                   // ステート要素を表示に戻す
                   stateElement.style.display = "";
+                  slotWrap.style.transform = "";
                 } catch (error) {
                   console.warn(`Failed to restore video elements:`, error);
                 }
