Change background-normal.mov to background-normal.mp4

--- a/index.html
+++ b/index.html
@@ -586,7 +586,7 @@
             playsinline
           >
             <source
-              src="images/background/background-normal.mov"
+              src="images/background/background-normal.mp4"
               id="source1"
             />
           </video>
@@ -643,7 +643,7 @@
             playsinline
           >
             <source
-              src="images/background/background-normal.mov"
+              src="images/background/background-normal.mp4"
               id="source2"
             />
           </video>
@@ -1263,7 +1263,7 @@
         // defaultタスクの実行
         executeDefaultTask(transition) {
           const backgroundVideoPaths = {
-            normal: "images/background/background-normal.mov",
+            normal: "images/background/background-normal.mp4",
             rush: "images/background/background-rush.mp4",
           };
 
