--- a/index.html
+++ b/index.html
@@ -3330,7 +3330,7 @@
             });
           },
           startGame: (state) => {
-            taskQueue2.changeBackground(backgroundVideoPaths.normal);
+            taskQueue2.changeBackgroundVideo(backgroundVideoPaths.normal);
             updateState(2, state);
           },
         };
